# wordle-solver

./: .gitignore  Cargo.toml  Makefile
benches/: score.rs  simd.rs
src/: bitwise_lib.rs  lib.rs  main.rs  simd_lib.rs
